# haskell-todo-api

./: .gitignore  README.md  stack.yaml  todo-api.cabal
config/: config.json
src/: Configuration.hs  Main.hs  Site.hs  TodoItem.hs
src/Api/: Utilities.hs
src/TodoItem/: Controller.hs  Data.hs
