name:                todo-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mclark1129/haskell-todo-api
license:             BSD3
license-file:        LICENSE
author:              Mike Clark
maintainer:          mclark1129@gmail.com
copyright:           2018 Mike Clark
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable todo-api
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:
    TodoItem
    , TodoItem.Controller
    , TodoItem.Data
    , Site
    , Api.Utilities
    , Configuration
  build-depends:       base >= 4.7 && < 5
                     , snap
                     , bytestring
                     , time
                     , transformers
                     , lifted-base
                     , aeson
                     , HDBC
                     , HDBC-odbc
                     , convertible